[gd_scene load_steps=18 format=3 uid="uid://duyjqxp4t2gpt"]

[ext_resource type="PackedScene" uid="uid://ci8trx1sym8te" path="res://bike/scripts/biker.tscn" id="1_sxux5"]
[ext_resource type="Script" path="res://all_scenes/levels/light_lvl/test_scene/test_scene.gd" id="1_xh2or"]
[ext_resource type="PackedScene" uid="uid://bh7od2advoqe4" path="res://all_scenes/levels/bg_levels/bg_vice/bg_vice.tscn" id="2_rwtey"]
[ext_resource type="PackedScene" uid="uid://x84spmq16m7y" path="res://all_scenes/objects_scenes/flags_scenes/flag_finish/flag_finish.tscn" id="3_kclrc"]
[ext_resource type="PackedScene" uid="uid://cd188ngfrnj0l" path="res://all_scenes/objects_scenes/flags_scenes/flag_start/flag_start.tscn" id="3_xnl3g"]
[ext_resource type="PackedScene" uid="uid://qrqrxxtwa04n" path="res://all_scenes/objects_scenes/fps_sc/fps_scene.tscn" id="5_mdfsn"]
[ext_resource type="Script" path="res://dialogue/d_scripts/area_d_scripts/d_vice.gd" id="6_dpi17"]
[ext_resource type="Resource" uid="uid://ww0ymtvaxdtj" path="res://dialogue/vice_dialogue.dialogue" id="7_u4bu8"]
[ext_resource type="FontFile" uid="uid://c5hk3tftdjq3g" path="res://assets/fonts/Outrun future Bold.otf" id="8_53m1j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23xam"]
size = Vector2(10.4647, 222.138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jji45"]
size = Vector2(10.465, 222.138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wdkes"]
size = Vector2(40.405, 41.4979)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hf8uv"]
blend_mode = 1
light_mode = 1

[sub_resource type="Animation" id="Animation_bxleb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.898039, 0.0823529, 0.74902, 0)]
}

[sub_resource type="Animation" id="Animation_l5a5f"]
resource_name = "name_level_anim"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.898039, 0.0823529, 0.74902, 0), Color(0.898039, 0.0823529, 0.74902, 1)]
}

[sub_resource type="Animation" id="Animation_35qxj"]
resource_name = "name_level_anim_end"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.898039, 0.0823529, 0.74902, 1), Color(0.898039, 0.0823529, 0.74902, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_whq52"]
_data = {
"RESET": SubResource("Animation_bxleb"),
"name_level_anim": SubResource("Animation_l5a5f"),
"name_level_anim_end": SubResource("Animation_35qxj")
}

[node name="Test_scene" type="Node2D"]
texture_filter = 1
script = ExtResource("1_xh2or")

[node name="BgVice" parent="." instance=ExtResource("2_rwtey")]
z_index = -1

[node name="ParallaxBackground" parent="BgVice" index="0"]
scale = Vector2(0.38, 0.38)
transform = Transform2D(0.38, 0, 0, 0.38, 0, 0)

[node name="Sprite2D" parent="BgVice/ParallaxBackground/ParallaxLayer3" index="0"]
position = Vector2(0, 60)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 11

[node name="Line2D" type="Line2D" parent="StaticBody2D"]
points = PackedVector2Array(11.8649, 210.638, 52.6945, 205.306, 83.5622, 217.232, 113.728, 228.176, 134.658, 259.512, 139.007, 339.768, 141.813, 359.411, 156.826, 390.138, 170.296, 416.937, 217.86, 418.48, 250.131, 419.603, 268.324, 419.182, 299.753, 411.325, 321.501, 404.87, 340.442, 402.205, 341.128, 451.231, 343.507, 517.232, 349.453, 601.369, 363.575, 659.491, 374.426, 662.613, 389.291, 632.288, 390.035, 420.906, 400.301, 418.286, 414.459, 403.302, 425.786, 394.926, 434.517, 385.369, 454.49, 384.23, 462.066, 373.566, 471.607, 373.005, 483.954, 357.01, 496.302, 356.168, 511.174, 353.362, 540.639, 340.173, 545.129, 692.626, 565.781, 603.896, 583.527, 690.242, 585.381, 582.971, 592.532, 580.323, 599.154, 541.652, 600.478, 374.522, 622.948, 385.382, 641.489, 386.441, 652.613, 366.576, 671.683, 364.193, 684.662, 341.679, 700.289, 340.09, 712.737, 323.933, 775.29, 351.214, 817.139, 367.106, 848.923, 379.555, 893.685, 375.052, 929.972, 371.079, 963.124, 335.852, 986.432, 316.252, 993.054, 296.122, 1009.48, 288.176, 1028.28, 276.257, 1037.29, 267.782, 1039.67, 348.831, 1052.65, 381.409, 1101.43, 380.614, 1126.59, 361.014, 1135.33, 352.274, 1157.05, 309.366, 1174.27, 345.122, 1187.77, 353.598, 1201.81, 368.96, 1211.61, 376.906, 1232.36, 377.701, 1250.9, 377.701, 1266.26, 269.371, 1275.53, 377.966)
width = 1.0
default_color = Color(0, 1, 0.501961, 1)

[node name="collision" type="CollisionPolygon2D" parent="StaticBody2D"]
build_mode = 1

[node name="UpperLine2D" type="Line2D" parent="."]
width = 1.0
default_color = Color(0, 1, 0.501961, 1)

[node name="Biker" parent="." groups=["player"] instance=ExtResource("1_sxux5")]
position = Vector2(213.627, 385.105)
collision_layer = 8

[node name="flags_timer" type="Node2D" parent="."]

[node name="f_s" type="Node2D" parent="flags_timer"]

[node name="flag_start" parent="flags_timer/f_s" instance=ExtResource("3_xnl3g")]
position = Vector2(259.307, 408.804)

[node name="Area2D_flagstart" type="Area2D" parent="flags_timer/f_s"]
position = Vector2(259.307, 408.804)

[node name="CollisionShape2D" type="CollisionShape2D" parent="flags_timer/f_s/Area2D_flagstart"]
position = Vector2(-3.26932, -100.133)
shape = SubResource("RectangleShape2D_23xam")

[node name="f_f" type="Node2D" parent="flags_timer"]
position = Vector2(6.66727, 0.419983)

[node name="flag_finish" parent="flags_timer/f_f" instance=ExtResource("3_kclrc")]
position = Vector2(1229.18, 366.422)

[node name="Area2D_flagfinish" type="Area2D" parent="flags_timer/f_f"]
position = Vector2(1229.18, 366.422)

[node name="CollisionShape2D" type="CollisionShape2D" parent="flags_timer/f_f/Area2D_flagfinish"]
position = Vector2(-3.10596, -99.7005)
shape = SubResource("RectangleShape2D_jji45")

[node name="other" type="Node2D" parent="."]

[node name="dialogues" type="Node2D" parent="other"]

[node name="d_vice" type="Area2D" parent="other/dialogues"]
collision_layer = 129
collision_mask = 129
script = ExtResource("6_dpi17")
dialogue_resource = ExtResource("7_u4bu8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="other/dialogues/d_vice"]
position = Vector2(214.936, 417.629)
shape = SubResource("RectangleShape2D_wdkes")

[node name="lights" type="Node2D" parent="other"]

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="other/lights"]
energy = 0.2
blend_mode = 1
range_layer_min = -1

[node name="timer_track" type="Node2D" parent="other"]

[node name="CanvasLayer" type="CanvasLayer" parent="other/timer_track"]

[node name="Label" type="Label" parent="other/timer_track/CanvasLayer"]
offset_left = 2.10224
offset_top = 1.89202
offset_right = 66.1022
offset_bottom = 24.892
text = "00:00.00"

[node name="name_level" type="Node2D" parent="other"]

[node name="CanvasLayer" type="CanvasLayer" parent="other/name_level"]

[node name="Label" type="Label" parent="other/name_level/CanvasLayer"]
modulate = Color(0.898039, 0.0823529, 0.74902, 0)
self_modulate = Color(0.898039, 0.0823529, 0.74902, 1)
material = SubResource("CanvasItemMaterial_hf8uv")
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 72.0
offset_right = 25.0
offset_bottom = 93.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("8_53m1j")
theme_override_font_sizes/font_size = 40
text = "Level   ' Vice '"

[node name="AnimationPlayer" type="AnimationPlayer" parent="other/name_level/CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_whq52")
}

[node name="FpsScene" parent="." instance=ExtResource("5_mdfsn")]
visible = false

[connection signal="body_entered" from="flags_timer/f_s/Area2D_flagstart" to="." method="_on_area_2d_flagstart_body_entered"]
[connection signal="body_entered" from="flags_timer/f_f/Area2D_flagfinish" to="." method="_on_area_2d_flagfinish_body_entered"]
[connection signal="body_entered" from="other/dialogues/d_vice" to="other/dialogues/d_vice" method="_on_body_entered"]

[editable path="BgVice"]
